# ts_mtdometrajectory

./: .gitignore  Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.py
conda/: meta.yaml
config/: default.yaml  invalid_malformed.yaml  invalid_no_such_algorithm.yaml
doc/: conf.py  developer-guide.rst  index.rst  manifest.yaml  version_history.rst
doc/news/: DM-39421.bugfix.1.rst  DM-39421.feature.1.rst  OSW-935.perf.rst  README.rst
python/lsst/ts/MTDomeTrajectory/: __init__.py  base_algorithm.py  config_schema.py  dome_trajectory.py  elevation_azimuth.py  mock_dome.py  simple_algorithm.py
python/lsst/ts/mtdometrajectory/: __init__.py  base_algorithm.py  config_schema.py  dome_trajectory.py  elevation_azimuth.py  mock_dome.py  simple_algorithm.py
schema/: MTDomeTrajectory.yaml
tests/: test_black.py  test_csc.py  test_mock_dome.py  test_validation.py
tests/data/config/: _init.yaml  invalid_bad_max_daz.yaml  invalid_no_such_algorithm.yaml  invalid_no_such_algorithm_config_name.yaml  valid.yaml  valid_no_el_motion.yaml
ups/: ts_MTDomeTrajectory.table  ts_mtdometrajectory.table
