[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_mtdometrajectory"
description = "CSC to make the dome for the Rubin Observatory Simonyi Survey Telescope dome track the telescope."
license = { text = "GPL" }
classifiers = ["Programming Language :: Python :: 3"]
urls = { documentation = "https://ts-mtdometrajectory.lsst.io", repository = "https://github.com/lsst-ts/ts_mtdometrajectory" }
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = ["python"]

[project.scripts]
run_mtdometrajectory = "lsst.ts.mtdometrajectory:run_mtdometrajectory"

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["documenteer[pipelines]"]
